# Refinery-Purchase-Order-System

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: quality.yml
apps/api-gateway/: README.md
apps/catalog-service/: .env.example  Dockerfile  README.md  catalog.db  pyproject.toml
apps/catalog-service/alembic/: env.py
apps/catalog-service/app/: main.py
apps/catalog-service/tests/: test_catalog_service.py
apps/frontend/: .env.example  components.json  next.config.mjs  package.json  tailwind.config.ts  vitest.config.ts
apps/frontend/app/: error.tsx  globals.css  layout.tsx  not-found.tsx
apps/frontend/lib/: catalog.ts  draft.ts  procurement.ts  query-client.tsx  storage.ts  types.ts  (+4 more)
apps/procurement-service/: .env.example  Dockerfile  README.md  alembic.ini  procurement.db  pyproject.toml
apps/procurement-service/alembic/: env.py
apps/procurement-service/alembic/versions/: 0001_create_procurement.py
apps/procurement-service/app/: main.py
apps/procurement-service/app/api/: routes.py
apps/procurement-service/app/clients/: catalog_client.py
apps/procurement-service/app/core/: config.py
apps/procurement-service/app/db/: session.py
apps/procurement-service/app/models/: purchase_order.py
apps/procurement-service/app/repositories/: procurement_repository.py
apps/procurement-service/app/schemas/: procurement.py
apps/procurement-service/app/services/: procurement_service.py
apps/procurement-service/tests/: test_procurement_service.py
docs/: backend.md  frontend.md
(+63 files in other folders)
