[project]
name = "refinery-procurement-service"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.2",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "pydantic-settings>=2.4.0",
  "psycopg[binary]>=3.2.1",
  "sqlalchemy>=2.0.32",
  "uvicorn[standard]>=0.30.6"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.3"
]

[tool.pytest.ini_options]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=80"
testpaths = ["tests"]

[tool.ruff]
line-length = 96
target-version = "py311"

[tool.setuptools.packages.find]
include = ["app*"]
